Add click event to sidebar-nav items

--- a/20170706/Mail_SPA/index.html
+++ b/20170706/Mail_SPA/index.html
@@ -10,6 +10,7 @@
     integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7"
     crossorigin="anonymous">
   </head>
+
   <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
@@ -20,6 +21,7 @@
         </div>
       </div>
     </nav>
+
     <div class="sidebar">
       <ul class="sidebar-nav">
         <li><button type="button" class="btn btn-danger">Compose</button></li>
@@ -27,7 +29,11 @@
         <li><a>Sent</a></li>
       </ul>
     </div>
-    <div class="content"></div>
+
+    <div class="content">
+      
+    </div>
+
   </body>
 </html>
 Contact GitHub API Training Shop Blog About
