Install webpack and add circles demo

--- a/20170903/index.html
+++ b/20170903/index.html
@@ -1,10 +1,17 @@
 <html>
   <head>
     <title>Canvas Practice</title>
+
+    <style>
+      html, body, canvas {
+        padding: 0px;
+        margin: 0px;
+      }
+    </style>
   </head>
 
   <body>
     <canvas id="myCanvas"></canvas>
-    <script type="application/javascript" src="canvas.js"></script>
+    <script src="bundle.js"></script>
   </body>
 </html>
