--- a/JavaScript30/01 - JavaScript Drum Kit/index-START.html
+++ b/JavaScript30/01 - JavaScript Drum Kit/index-START.html
@@ -59,6 +59,30 @@
 
 <script>
 
+  function playSound(e) {
+    const audio = document.querySelector(`audio[data-key="${e.keyCode}"]`)
+    const key = document.querySelector(`.key[data-key="${e.keyCode}"]`)
+
+    if (!audio) return; //no element selected.
+
+    audio.currentTime = 0; //resets
+    audio.play();
+
+    key.classList.add('playing');
+  }
+
+  function removeTransition(e) {
+    if (e.propertyName !== 'transform') return; //picking one of the events
+    //this is the key element
+    this.classList.remove('playing');
+  }
+
+  const keys = document.querySelectorAll('.key')
+  //must loop through each key (not jQuery)
+  keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+
+  window.addEventListener('keydown', playSound);
+
 </script>
 
 
