--- a/JavaScript30/02 - JS and CSS Clock/index-START.html
+++ b/JavaScript30/02 - JS and CSS Clock/index-START.html
@@ -62,12 +62,58 @@
       background:black;
       position: absolute;
       top:50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.1s;
+      transition-timing-function: cubic-bezier(0.26, 2.87, 0.56, 1.01);
+    }
+
+    .second-hand {
+      background: red;
+    }
+
+    .min-hand {
+      background: yellow;
+    }
+
+    .hour-hand {
     }
 
   </style>
 
-  <script>
 
+  <script>
+    const secondHand = document.querySelector(".second-hand");
+    const minuteHand = document.querySelector(".min-hand");
+    const hourHand = document.querySelector(".hour-hand");
+
+    function setTime() {
+      // const date = Date.now() // Not this
+      const date = new Date()
+
+      const seconds = date.getSeconds();
+      const secondDegrees = ((seconds / 60) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondDegrees}deg)`;
+
+      const minutes = date.getMinutes();
+      const minuteDegrees = ((minutes / 60) * 360) + ((seconds/60)*6) + 90;
+      minuteHand.style.transform = `rotate(${minuteDegrees}deg)`;
+
+      const hours = date.getHours();
+      const hourDegrees = ((hours / 12) * 360) + ((minutes/60)*30) + 90;
+      hourHand.style.transform = `rotate(${hourDegrees}deg)`;
+
+      //prevent default weird transition at 0 seconds;
+      if (seconds == 00) {
+        console.log('0');
+        secondHand.style.transition =  "all 0s";
+      } else {
+        secondHand.style.transition = "all 0.1s";
+        secondHand.style.transitionTimingFunction = "cubic-bezier(0.26, 2.87, 0.56, 1.01)";
+      }
+    }
+
+    setInterval(setTime, 1000);
 
   </script>
 </body>
