--- a/JavaScript30/07 - Array Cardio Day 2/index-START.html
+++ b/JavaScript30/07 - Array Cardio Day 2/index-START.html
@@ -26,15 +26,48 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some(function(person) {
+      const currentYear = (new Date()).getFullYear();
+      return (currentYear - person.year >= 19);
+    })
+
+    console.log(isAdult);
+
     // Array.prototype.every() // is everyone 19 or older?
+
+    //single line fat arrow notation.
+    const allAdults = people.every(person => (
+      (new Date()).getFullYear() - person.year >= 19)
+    );
+
+    console.log(allAdults);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const comment = comments.find((comment) => (
+      comment.id = 823423
+    ));
+
+    console.log(comment);
+
     // Array.prototype.findIndex()
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+    const comment_idx = comments.findIndex((comment) => (
+      comment.id = 823423
+    ));
+
+    const newComments = [
+      ...comments.slice(0, comment_idx),
+      ...comments.slice(comment_idx + 1)
+    ]
+
+    console.log(comment_idx); // idx = 0;
+    console.log(newComments);
+
+
 
   </script>
 </body>
