Complete dev tools ex

--- a/JavaScript30/09 - Dev Tools Domination/index-START.html
+++ b/JavaScript30/09 - Dev Tools Domination/index-START.html
@@ -22,24 +22,59 @@
     // Interpolated
 
     // Styled
+    console.log('%c I am some great text', 'font-size:50px; background: red; text-shadow: 10px 10px 0 blue');
 
     // warning!
+    console.warn('Uh oh');
 
     // Error :|
+    console.error('oops!');
 
     // Info
+    console.info('insert a funfact');
+    //doesn't work?
 
     // Testing
+    console.assert(1 === 2, 'Assert something failed');
 
     // clearing
+    console.clear();
 
     // Viewing DOM Elements
+    // console.log(p);
+    // console.dir(p);
 
     // Grouping together
+    dogs.forEach(dog => {
+      console.groupCollapsed(`${dog.name}`);
+      console.log(`This is ${dog.name}`);
+      console.log(`${dog.name} is ${dog.age} years old`);
+      console.log(`${dog.name} is ${dog.age * 7} dog years old`);
+      console.groupEnd(`${dog.name}`);
+    });
 
     // counting
+    console.count('Ana');
+    console.count('Ana');
+    console.count('Isak');
+    console.count('Isak');
+    console.count('Ana');
+    console.count('Isak');
+    console.count('Ana');
+    console.count('Isak');
+    console.count('Isak');
+    console.count('Isak');
+    console.count('Isak');
+    console.count('Isak');
 
     // timing
+    console.time('fetching data');
+    fetch('http://api.github.com/users/wesbos')
+      .then(data => data.json())
+      .then(data => {
+        console.timeEnd('fetching data');
+        console.log(data);
+      });
 
   </script>
 </body>
