--- a/JavaScript30/14 - JavaScript References VS Copying/index-START.html
+++ b/JavaScript30/14 - JavaScript References VS Copying/index-START.html
@@ -10,41 +10,49 @@
     // start with strings, numbers and booleans
 
     // Let's say we have an array
+    // and we want to make a copy of it.
     const players = ['Wes', 'Sarah', 'Ryan', 'Poppy'];
 
-    // and we want to make a copy of it.
+    const team = players;
+    console.log(players, team);
 
-    // You might think we can just do something like this:
+    const team2 = players.slice();
 
-    // however what happens when we update that array?
+    const team3 = [].concat(players);
 
-    // now here is the problem!
+    // ES6 spread operator
+    const team4 = [...players];
+    team4[3] = 'something';
+    console.log(team4);
 
-    // oh no - we have edited the original array too!
+    const team5 = Array.from(players);
 
-    // Why? It's because that is an array reference, not an array copy. They both point to the same array!
+    // Objects
 
-    // So, how do we fix this? We take a copy instead!
+    const person = {
+      name: 'Anastassia',
+      age: 23
+    };
 
-    // one way
+    const cap2 = Object.assign({}, person, { number: 99, age: 12 });
 
-    // or create a new array and concat the old one in
+    console.log(cap2);
+    // only 1 level deep, use lodash's cloneDeep maybe.
 
-    // or use the new ES6 Spread
+    const me = {
+      name: 'Anastassia',
+      age: 100,
+      social: {
+        fb: 'anastassia16',
+        twitter: 'anastassiaflow'
+      }
+    };
 
-    // now when we update it, the original one isn't changed
+    console.clear();
+    console.log(me);
 
-    // The same thing goes for objects, let's say we have a person object
-
-    // with Objects
-
-    // and think we make a copy:
-
-    // how do we take a copy instead?
-
-    // We will hopefully soon see the object ...spread
-
-    // Things to note - this is only 1 level deep - both for Arrays and Objects. lodash has a cloneDeep method, but you should think twice before using it.
+    const dev = Object.assign({}, me);
+    const dev2 = JSON.parse(JSON.stringify(me));
 
   </script>
 
