Complete challenge buttons

--- a/JavaScript30/15 - LocalStorage/index-START.html
+++ b/JavaScript30/15 - LocalStorage/index-START.html
@@ -23,12 +23,17 @@
       <input type="text" name="item" placeholder="Item Name" required>
       <input type="submit" value="+ Add Item">
     </form>
+    <div class="button-options">
+      <button onClick="deleteAll()">Delete All</button>
+      <button onClick="checkAll(true)">Check All</button>
+      <button onClick="checkAll(false)">Uncheck All</button>
+    </div>
   </div>
 
 <script>
   const addItems = document.querySelector('.add-items');
   const itemsList = document.querySelector('.plates');
-  const items = JSON.parse(localStorage.getItem('items')) || [];
+  let items = JSON.parse(localStorage.getItem('items')) || [];
 
   function addItem(e) {
     e.preventDefault();
@@ -45,14 +50,18 @@
   }
 
   function populateList(plates = [], platesList) {
-    platesList.innerHTML = plates.map((plate, i) => {
-      return `
-      <li>
+    if (plates.length == 0) {
+      platesList.innerHTML = "<li>Loading Tapas...</li>"
+    } else {
+      platesList.innerHTML = plates.map((plate, i) => {
+        return `
+        <li>
         <input type="checkbox" data-index=${i} id="item${i}" ${plate.done ? 'checked' : ''} />
         <label for="item${i}">${plate.text}</label>
-      </li>
-      `;
-    }).join('');
+        </li>
+        `;
+      }).join('');
+    }
   }
 
   function toggleDone(e) {
@@ -66,6 +75,23 @@
     items[index].done = !items[index].done;
     localStorage.setItem('items', JSON.stringify(items));
     populateList(items, itemsList);
+  }
+
+
+  //Challenge: add buttons to delete all, check all, uncheck all.
+
+  function deleteAll() {
+    items = [];
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
+  }
+
+  function checkAll(condition) {
+    items.map((item, i) => {
+      item.done = condition;
+    });
+    populateList(items, itemsList);
+    localStorage.setItem('items', JSON.stringify(items));
   }
 
   addItems.addEventListener('submit', addItem);
