--- a/JavaScript30/16 - Mouse Move Shadow/index-start.html
+++ b/JavaScript30/16 - Mouse Move Shadow/index-start.html
@@ -35,6 +35,42 @@
   </style>
 
 <script>
+  const hero = document.querySelector('.hero');
+  const text = hero.querySelector('h1');
+  const walk = 300;
+
+  function shadow(e) {
+    // const width = hero.offsetWidth;
+    // const height = hero.offsetHeight;
+    // destructuring
+    const { offsetWidth: width, offsetHeight: height } = hero;
+
+    let { offsetX: x, offsetY: y } = e;
+
+    if (this !== e.target) {
+      x = x + e.target.offsetLeft;
+      y = y + e.target.offsetTop;
+    }
+
+    const xWalk = Math.round((x / width * walk) - (walk / 2));
+    const yWalk = Math.round((y / height * walk) - (walk / 2));
+    // our walk is 100, so we'll go from -50 to 50.
+
+    console.log(xWalk, yWalk);
+    // text.style.textShadow = `${xWalk}px ${yWalk}px 0 red`;
+    text.style.textShadow = `
+      ${xWalk}px ${yWalk}px 0 rgba(255,0,255,0.7),
+      ${xWalk * -1}px ${yWalk}px 0 rgba(0,255,255,0.7),
+      ${xWalk}px ${yWalk * -1}px 0 rgba(0,255,0,0.7),
+      ${xWalk * -1}px ${yWalk * -1}px 0 rgba(0,0,255,0.7),
+      ${yWalk}px ${xWalk}px 0 rgba(255,0,255,0.7),
+      ${yWalk * -1}px ${xWalk}px 0 rgba(0,255,255,0.7),
+      ${yWalk}px ${xWalk * -1}px 0 rgba(0,255,0,0.7),
+      ${yWalk * -1}px ${xWalk * -1}px 0 rgba(0,0,255,0.7)
+    `;
+  }
+
+  hero.addEventListener('mousemove', shadow);
 </script>
 </body>
 </html>
