--- a/JavaScript30/18 - Adding Up Times with Reduce/index-START.html
+++ b/JavaScript30/18 - Adding Up Times with Reduce/index-START.html
@@ -188,9 +188,9 @@ const timeNodes = Array.from(document.querySelectorAll('[data-time]'));
 const seconds = timeNodes
   .map(node => node.dataset.time)
   .map(timeCode => {
-    const [mins, secs] = timeCode.split(':').map(parseFloar);
-    return (min * 60) + secs;
-  }).reduce((total, vidSeconds) => total, vidSeconds);
+    const [mins, secs] = timeCode.split(':').map(parseFloat);
+    return (mins * 60) + secs;
+  }).reduce((total, vidSeconds) => total + vidSeconds);
 
 let secondsLeft = seconds;
 const hours = Math.floor(secondsLeft / 3600);
