--- a/JavaScript30/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
+++ b/JavaScript30/25 - Event Capture, Propagation, Bubbling and Once/index-START.html
@@ -39,6 +39,24 @@
 
 <button></button>
 <script>
+  const divs = document.querySelectorAll('div');
+  const button = document.querySelector('button');
+
+  function logText (e) {
+    // e.stopPropagation();
+    console.log(this.classList.value);
+  }
+
+  divs.forEach(div => div.addEventListener('click', logText, {
+    capture: false,
+    once: true
+  }));
+
+  button.addEventListener('click', () => {
+    console.log('Click!!');
+  }, {
+    once: true
+  });
 
 </script>
 </body>
